--- a/client/src/App.css
+++ b/client/src/App.css
@@ -39,7 +39,7 @@
 
 body {
   background: #f5f5f5;
-  padding: 16px;
+  /* padding: 16px; */
 }
 
 #chat {
@@ -54,4 +54,9 @@ body {
 
 .content {
   margin-bottom: 8px;
+}
+
+#bottomBar {
+  padding: 0;
+  margin: 0;
 }
