--- a/client/src/BottomBar.css
+++ b/client/src/BottomBar.css
@@ -1,4 +1,23 @@
-#appBar {
-    bottom: 0;
-    top: auto;
+#bottom-bar {
+    /* border: 2px solid orange; */
+    padding-left: 16px;
+    padding-right: 16px;
+}
+
+/* #toolbar {
+    border: 2px solid blue;
+} */
+
+#msg-container {
+    /* border: 2px solid red; */
+    box-sizing: border-box;
+}
+
+#input-base {
+    /* border: 2px solid yellow; */
+    width: 100%;
+    height: 32px;
+    padding-left: 6px;
+    font-size: 16px;
+    box-sizing: border-box;
 }
