--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,7 @@
+:root {
+  --blurVal: blur(0px);
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
