--- a/client/src/Navbar.css
+++ b/client/src/Navbar.css
@@ -33,3 +33,40 @@
     font-size: 16px;
     cursor: pointer;
 }
+
+@media (max-width: 768px) {
+    #header {
+        width: 100%;
+        margin-bottom: 8px;
+        padding-left: 0;
+        display: block;
+        text-align: center;
+    }
+
+    #navbar-right {
+        width: 100%;
+        display: block;
+        text-align: center;
+        margin-bottom: 6px;
+    }
+
+    #header {
+        font-size: 14px;
+    }
+    
+    .nav-btn {
+        width: 33.3%;
+        margin: 0;
+        font-size: 12px;
+    }
+}
+
+@media (max-width: 425px) {
+    #use-btn, #explanation-btn {
+        width: 50%;
+    }
+
+    #tools-btn {
+        width: 100%;
+    }
+}
